Implemented reading from dataset level

--- a/readwritetest/VirtualRaster.ipynb
+++ b/readwritetest/VirtualRaster.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:82176ca98de1159717a3e502d4f4eba0a60fb10648b2ebc65d0783848b6dfed6"
+  "signature": "sha256:c4feb518cd5fe48ffefe60b91f2f1621815f2aa28b64eb658f2a58d334c16331"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 63
+     "prompt_number": 149
     },
     {
      "cell_type": "code",
@@ -47,7 +47,16 @@
       "        example, ((0, 2), (0, 2)) defines a 2x2 window at the upper left\n",
       "        of the raster dataset.\n",
       "        \"\"\"\n",
-      "        pass\n",
+      "        band = self.bands[ bidx - 1]\n",
+      "        if not window:\n",
+      "            window = ((0,self.height),(0,self.width))\n",
+      "        if not out:\n",
+      "            window_shape = rasterio._base.window_shape(window, self.height, self.width)\n",
+      "            if masked:\n",
+      "                out = np.ma.empty(window_shape, band.dtype)\n",
+      "            else:\n",
+      "                out = np.empty(window_shape, band.dtype)\n",
+      "        return band.read(out, window, masked)\n",
       "        \n",
       "    def open(mode = 'r', base_path = None):\n",
       "        #map( lambda b: map( lambda s: s.open, b.sources ),self.bands)\n",
@@ -64,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 64
+     "prompt_number": 162
     },
     {
      "cell_type": "code",
@@ -74,13 +83,19 @@
       "    def __init__(self, band_number, dtype, nodata = None):\n",
       "        self.band_number = band_number\n",
       "        self.dtype = dtype\n",
-      "        self.nodata\n",
-      "        self.sources = []"
+      "        self.nodata = nodata\n",
+      "        self.sources = []\n",
+      "    \n",
+      "    def read(self, out, req_window, masked=None):\n",
+      "        # Consider using indexed dest_windows instead of brute force\n",
+      "        map(lambda src: src.read(out, req_window, masked), self.sources)\n",
+      "        return out\n",
+      "        "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 65
+     "prompt_number": 163
     },
     {
      "cell_type": "code",
@@ -108,7 +123,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 109
+     "prompt_number": 164
     },
     {
      "cell_type": "code",
@@ -124,7 +139,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 110
+     "prompt_number": 165
     },
     {
      "cell_type": "code",
@@ -235,7 +250,7 @@
       "        if masked:\n",
       "            tmp_out = np.ma.empty(out_window_shape, src.dataset.dtypes[0]) \n",
       "        else:\n",
-      "            np.empty(out_window_shape, src.dataset.dtypes[0])\n",
+      "            tmp_out = np.empty(out_window_shape, src.dataset.dtypes[0])\n",
       "            \n",
       "        # Ok. Phew. Read\n",
       "        self.dataset.read_band(self.source_band, out=tmp_out, window=src_req_window, masked=masked)        \n",
@@ -251,7 +266,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 141
+     "prompt_number": 166
     },
     {
      "cell_type": "code",
@@ -288,7 +303,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 142,
+       "prompt_number": 167,
        "text": [
         "masked_array(data =\n",
         " [[   0.    0.    0.    0.    0.    0.    0.    0.    0.]\n",
@@ -306,27 +321,63 @@
        ]
       }
      ],
-     "prompt_number": 142
+     "prompt_number": 167
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rasterio._base.window_shape( ( (0,5),(10,20) )  )"
+      "band = Band(1,'int64')\n",
+      "band.sources.append(src)\n",
+      "\n",
+      "dataset = VirtualRaster((9,9))\n",
+      "dataset.bands.append(band)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 168
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "dataset.read_band(1)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "req_window_shape (9, 9)\n",
+        "dest_req_window, req_window_changed ((3, 6), (3, 6)) (True, True)\n",
+        "src_req_window ((1, 4), (1, 4))\n",
+        "src_req_window, src_req_window_changed ((1, 4), (1, 4)) (False, False)\n",
+        "dest_req_window ((3, 6), (3, 6))\n",
+        "scale_req_win_to_outarray (1.0, 1.0)\n",
+        "out_window ((3, 6), (3, 6))\n"
+       ]
+      },
+      {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 169,
        "text": [
-        "(5, 10)"
+        "array([[  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
+        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
+        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
+        "       [  0,   0,   0,  20, 100,  36,   0,   0,   0],\n",
+        "       [  0,   0,   0,   8,  35,  10,   0,   0,   0],\n",
+        "       [  0,   0,   0,  42,  50,   6,   0,   0,   0],\n",
+        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
+        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
+        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0]])"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 169
     },
     {
      "cell_type": "code",
