Fiddling with nodata

--- a/readwritetest/VirtualRaster.ipynb
+++ b/readwritetest/VirtualRaster.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c4feb518cd5fe48ffefe60b91f2f1621815f2aa28b64eb658f2a58d334c16331"
+  "signature": "sha256:61b57ebf470fa58680a39c1bc84330dd7060d613dccb75fc590e2c97e4850807"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -342,7 +342,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "dataset.read_band(1)"
+      "dataset.read_band(1, masked=True)"
      ],
      "language": "python",
      "metadata": {},
@@ -363,21 +363,25 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 169,
+       "prompt_number": 170,
        "text": [
-        "array([[  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-        "       [  0,   0,   0,  20, 100,  36,   0,   0,   0],\n",
-        "       [  0,   0,   0,   8,  35,  10,   0,   0,   0],\n",
-        "       [  0,   0,   0,  42,  50,   6,   0,   0,   0],\n",
-        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-        "       [  0,   0,   0,   0,   0,   0,   0,   0,   0]])"
+        "masked_array(data =\n",
+        " [[  0   0   0   0   0   0   0   0   0]\n",
+        " [  0   0   0   0   0   0   0   0   0]\n",
+        " [  0   0   0   0   0   0   0   0   0]\n",
+        " [  0   0   0  20 100  36   0   0   0]\n",
+        " [  0   0   0   8  35  10   0   0   0]\n",
+        " [  0   0   0  42  50   6   0   0   0]\n",
+        " [  0   0   0   0   0   0   0   0   0]\n",
+        " [  0   0   0   0   0   0   0   0   0]\n",
+        " [  0   0   0   0   0   0   0   0   0]],\n",
+        "             mask =\n",
+        " False,\n",
+        "       fill_value = 999999)"
        ]
       }
      ],
-     "prompt_number": 169
+     "prompt_number": 170
     },
     {
      "cell_type": "code",
